--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>About</h2>
     <p>
       簡単な自己紹介やアピール。<br>
-      どんなことができる、したいのか。
+      現在ZEN大学でAIやプログラミングの勉強をしています。
     </p>
 
     <h3>Profile</h3>
@@ -27,7 +27,7 @@
     <table>
       <tr>
         <th>OS</th>
-        <td>Windows, Ubuntu など</td>
+        <td>Windows</td>
       </tr>
       <tr>
         <th>Engine, Frameworks</th>
@@ -35,20 +35,20 @@
       </tr>
       <tr>
         <th>Tool, MiddleWare</th>
-        <td>Git, PostgreSQL など</td>
+        <td>Git, PostgreSQL,clipStudiopaint,live2D,unity,blender</td>
       </tr>
       <tr>
         <th>資格・免許</th>
-        <td>情報処理技術者、LPIC など</td>
+        <td></td>
       </tr>
     </table>
 
     <h3>Works</h3>
-    <p>アピールできる活動内容を書きましょう。</p>
+    <p>イラストを制作したり、Live2Dでのrig、blenderでのrigをメインに活動しています。</p>
     <ul>
       <li><a href="https://github.com/">GitHub</a></li>
-      <li><a href="https://qiita.com/">Qiita</a></li>
-      <li><a href="https://zenn.dev/">Zenn</a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
       <li>
         作った作品
         <ul>
@@ -70,16 +70,16 @@
     <p>学歴、職歴、アルバイト、インターン経験など。</p>
     <table>
       <tr>
-        <th>2019 年</th>
-        <td><a href="https://dwango.co.jp/">株式会社ドワンゴ</a> 入社</td>
+        <th>2019 年　3 月　</th>
+        <td><a 高校</a 卒業</td>
       </tr>
       <tr>
-        <th>2018 年</th>
-        <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/">N高等学校</a> 卒業</td>
+        <th>2025 年　4 月</th>
+        <td>ZEN大学 <a href="https://zen.ac.jp/"></a> 入学</td>
       </tr>
       <tr>
-        <th>20XX 年</th>
-        <td>表彰、受賞歴、メディア掲載記事などあれば</td>
+        <th>2029 年　3 月</th>
+        <td>ZEN大学 <a href="https://zen.ac.jp/"></a> 卒業予定</td>
       </tr>
       </tr>
       <h3>Open Processing</h3>
