--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
       </tr>
       <tr>
         <th>2025 年　4 月</th>
-        <td>ZEN大学 <a href="https://zen.ac.jp/"></a> 入学</td>
+        <td><a href="https://zen.ac.jp/">ZEN大学</a> 入学</td>
       </tr>
       <tr>
         <th>2029 年　3 月</th>
-        <td>ZEN大学 <a href="https://zen.ac.jp/"></a> 卒業予定</td>
+        <td><a href="https://zen.ac.jp/">ZEN大学</a> 卒業予定</td>
       </tr>
       </tr>
       <h3>Open Processing</h3>
