Add image to index.html
Added an image to the portfolio page.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>宗前扇太郎のポートフォリオ</title>
   </head>
   <body>
+    <img src="姫じゃみイラスト01ウォーターマーク..jpg" alt="イラスト">
     <h1>宗前扇太郎</h1>
-    <img src=""E:\配信素材関係\受肉体関連\姫じゃみイラスト01ウォーターマーク.jpg"">
+  
 
     <h2>About</h2>
     <p>
