--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>宗前扇太郎のポートフォリオ</title>
   </head>
   <body>
-    <img src="姫じゃみイラスト01ウォーターマーク..jpg" alt="イラスト">
     <h1>宗前扇太郎</h1>
-  
+  　<img src="姫じゃみイラスト01ウォーターマーク.jpg" alt="イラスト">
 
     <h2>About</h2>
     <p>
