--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>宗前扇太郎</h1>
-  　<img src="姫じゃみイラスト01ウォーターマーク.jpg" alt="イラスト">
+  　<img src="姫じゃみイラスト01ウォーターマーク.jpg" width="300">
 
     <h2>About</h2>
     <p>
